Add per-day CSV's

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -15,11 +15,13 @@ jobs:
         run: |
           pip install -r requirements.txt
           python -u scrape-openhouse.py
+          python -u generate-csv-summary.py
 
           git config --global user.email "bot@jonty.co.uk"
           git config --global user.name "OH London update GHA"
 
           git add data
+          git add csv
           git commit -m "Automatic OH London data update"
       - name: Push changes
         uses: ad-m/github-push-action@master
