--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
 certifi==2021.5.30
 charset-normalizer==2.0.4
+filelock==3.8.0
 idna==3.2
 lxml==4.6.3
+platformdirs==2.5.2
 python-dateutil==2.8.2
 pytz==2021.1
 requests==2.26.0
 Shapely==1.7.1
 simplekml==1.3.5
 six==1.16.0
+uritools==4.0.0
+urlextract==1.6.0
 urllib3==1.26.6
