--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,10 @@ lxml==4.9.3
 platformdirs==3.10.0
 python-dateutil==2.8.2
 pytz==2021.1
-requests==2.31.0
 Shapely==2.0.4
 simplekml==1.3.6
 six==1.16.0
 uritools==4.0.1
 urlextract==1.8.0
 urllib3==2.0.4
+curl_cffi
