--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -13,6 +13,10 @@ jobs:
         uses: actions/checkout@v2
         with:
           persist-credentials: false
+      - name: Set up WireGuard Connection
+        uses: niklaskeerl/easy-wireguard-action@v2
+        with:
+          WG_CONFIG_FILE: ${{ secrets.WG_CONFIG_FILE }}
       - name: Scrape and commit
         env:
           OH_SESSION_COOKIE: ${{ secrets.OH_SESSION_COOKIE }}
