--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -20,15 +20,16 @@ jobs:
       - name: Scrape and commit
         env:
           OH_SESSION_COOKIE: ${{ secrets.OH_SESSION_COOKIE }}
+          YEAR: 2025
         run: |
           sudo apt-get install libgeos-dev
           pip install -r requirements.txt
 
           # we'll regenerate these, so remove them now and git add -u will
           # later mark them as deleted in git
-          rm data/2024/* || true
-          rm csv/2024/* || true
-          rm -rf maps/2024/* || true
+          rm data/$YEAR/* || true
+          rm csv/$YEAR/* || true
+          rm -rf maps/$YEAR/* || true
 
           python -u scrape-openhouse.py
           python -u generate-csv-summary.py
