--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -13,14 +13,11 @@ jobs:
         uses: actions/checkout@v2
         with:
           persist-credentials: false
-      - name: Set up WireGuard Connection
-        uses: niklaskeerl/easy-wireguard-action@v2
-        with:
-          WG_CONFIG_FILE: ${{ secrets.WG_CONFIG_FILE }}
       - name: Scrape and commit
         env:
-          OH_SESSION_COOKIE: ${{ secrets.OH_SESSION_COOKIE }}
           YEAR: 2025
+          OH_SESSION_COOKIE: ${{ secrets.OH_SESSION_COOKIE }}
+          WG_CONFIG_FILE: ${{ secrets.WG_CONFIG_FILE }}
         run: |
           sudo apt-get install libgeos-dev
           pip install -r requirements.txt
@@ -30,6 +27,12 @@ jobs:
           rm data/$YEAR/* || true
           rm csv/$YEAR/* || true
           rm -rf maps/$YEAR/* || true
+
+          # Spin up wireproxy
+          wget https://github.com/whyvl/wireproxy/releases/download/v1.0.9/wireproxy_linux_amd64.tar.gz
+          tar -zxf wireproxy_linux_amd64.tar.gz
+          echo "$WG_CONFIG_FILE" >> wireguard.conf
+          ./wireproxy -c wireproxy.conf &
 
           python -u scrape-openhouse.py
           python -u generate-csv-summary.py
@@ -65,6 +68,9 @@ jobs:
 
           # || true means this won't error when there's nothing to commit
           git commit -m "Automatic OH London data update" || true
+
+          # Kill wireproxy
+          kill %1
 
       - name: Push changes
         uses: ad-m/github-push-action@master
