--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -39,6 +39,7 @@ jobs:
           python -u generate-maps.py
           python -u generate-new-venue-lists.py
           python -u generate-venue-announcement-list.py
+          python -u generate-balloted-venue-list.py
 
           mv data data.new
           mv csv csv.new
