--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -68,6 +68,7 @@ jobs:
           git add csv
           git add maps
           git add reports
+          git add scrape_summaries
 
           git config --global user.email "bot@jonty.co.uk"
           git config --global user.name "OH London update GHA"
