--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -45,6 +45,7 @@ jobs:
           python -u generate-venue-announcement-list.py
           python -u generate-balloted-venue-list.py
           python -u generate-bookable-venue-list.py
+          python -u generate-venue-availability-change-list.py
 
           mv data data.new
           mv csv csv.new
